--- a/Recommender.html
+++ b/Recommender.html
@@ -48,8 +48,8 @@
           style="color: white"
           >Recommender</a
         >
-        <a class="nav-item nav-link" href="profile.html" style="color: white"
-          >Profile</a
+        <a class="nav-item nav-link" href="watchlist.html" style="color: white"
+          >Watchlist</a
         >
       </div>
     </div>
