--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="Recommender.html" style="color: white;">Recommender</a>
-        <a class="nav-item nav-link" href="profile.html" style="color: white;">Profile</a>
+        <a class="nav-item nav-link" href="watchlist.html" style="color: white;">Watchlist</a>
         <form class="form-inline my-2 my-lg-0" id="search-form">
             <input class="form-control mr-sm-2" type="search" placeholder="Search Movies" aria-label="search" id="search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
