--- a/watchlist.html
+++ b/watchlist.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link rel="stylesheet" href="profile.css" />
+  <link rel="stylesheet" href="watchlist.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -14,12 +14,13 @@
   <script>
     src = "https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js";
   </script>
+  <script src="watchlist.js"></script>
 
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile</title>
+    <title>Watchlist</title>
   </head>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -48,8 +49,8 @@
           style="color: white"
           >Recommender</a
         >
-        <a class="nav-item nav-link" href="profile.html" style="color: white"
-          >Profile</a
+        <a class="nav-item nav-link" href="watchlist.html" style="color: white"
+          >Watchlist</a
         >
       </div>
     </div>
