--- a/watchlist.html
+++ b/watchlist.html
@@ -14,7 +14,6 @@
   <script>
     src = "https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js";
   </script>
-  <script src="watchlist.js"></script>
 
   <head>
     <meta charset="UTF-8" />
@@ -55,4 +54,61 @@
       </div>
     </div>
   </nav>
+  <main id="main">
+    <div class="movie">
+      <img
+        src="https://images.unsplash.com/photo-1610890690846-5149750c8634?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2971&q=80"
+        alt="Image"
+      />
+      <div class="movie-info">
+        <h3>Movie Title</h3>
+        <span class="green">9.8 </span>
+      </div>
+
+      <div class="overview">
+        <h3>Overview</h3>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat.
+      </div>
+    </div>
+    <div class="movie">
+      <img
+        src="https://images.unsplash.com/photo-1610890690846-5149750c8634?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2971&q=80"
+        alt="Image"
+      />
+      <div class="movie-info">
+        <h3>Movie Title</h3>
+        <span class="green">9.8 </span>
+      </div>
+
+      <div class="overview">
+        <h3>Overview</h3>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat.
+      </div>
+    </div>
+    <div class="movie">
+      <img
+        src="https://images.unsplash.com/photo-1610890690846-5149750c8634?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2971&q=80"
+        alt="Image"
+      />
+      <div class="movie-info">
+        <h3>Movie Title</h3>
+        <span class="green">9.8 </span>
+      </div>
+
+      <div class="overview">
+        <h3>Overview</h3>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat.
+      </div>
+    </div>
+  </main>
+  <script src="watchlist.js"></script>
 </html>
